see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-May-2011 Jean-Marie Simonet
 #$ [#25845] *Breadcrumbs never use the language string for Home
 #$ [#25837] *Admin menu does not differentiate between default Home set to "All" and those set to a Content Language. Thanks Christophe.

09-May-2011 Jean-Marie Simonet
 [#25830] *404 - page not found - error.php - for template beez_20 - not working properly
 
05-May-2011 Jean-Marie Simonet
 # [#25820] *Automatic site content language change at login parameter not implemented in languagefilter.

03-May-2011 Jean-Marie Simonet
 # [#25796] *Editing template files is impossible if Codemirror and editor None are disabled
 # [#25795] *Normalizing language load in profile plugin
 # [#25642] Update TinyMCE to version 3.3.9.4. Thanks Rouven.
 # [#24574] After Reading message, the counter does not refresh. Thanks Marco and Roland.
 
28-Apr-2011 Christophe Demko
 # [#25693] Incorrect importing of languagefilter, plugin's class is initialised twice (Dennis Hermatski)

27-Apr-2011 Christophe Demko
 # [#24360] User Profile Date showing wrong Birthday date (Omar Ramos)
 # [#25771] *Languagefilter plugin parameter not implemented (Jean-Marie Simonet)

27-Apr-2011 Jean-Marie Simonet
 # [#25759] Broken system messages in beez_20 and beez5. Thanks Dennis.
 # [#25752] No ending fieldset tag in com_contact. Thanks Dennis.
 
26-Apr-2011 Jean-Marie Simonet
 $ [#25742] SPACERDROP_LABEL too long for a label. Thanks Paulo.
 # [#25753] Hathor bugs with batch function. Thanks Dennis.
 $ [#25723] I can't remove script,applet,iframe form tinyMCE blacklist. Thanks Bill.

 25-Apr-2011 Jean-Marie Simonet