@@ -43,7 +43,8 @@ COM_LANGUAGES_NO_ITEM_SELECTED="No languages selected"
 COM_LANGUAGES_SAVE_SUCCESS="Content Language successfully saved"
 COM_LANGUAGES_SEARCH_IN_TITLE="Search in title"
 COM_LANGUAGES_SUBMENU_CONTENT="Content"
-COM_LANGUAGES_SUBMENU_INSTALLED="Installed"
+COM_LANGUAGES_SUBMENU_INSTALLED_ADMINISTRATOR="Installed - Administrator"
+COM_LANGUAGES_SUBMENU_INSTALLED_SITE="Installed - Site"
 COM_LANGUAGES_VIEW_INSTALLED_TITLE="Language Manager: Installed Languages"
 COM_LANGUAGES_VIEW_LANGUAGE_EDIT_EDIT_TITLE="Language Manager: Edit Content Language"
 COM_LANGUAGES_VIEW_LANGUAGE_EDIT_NEW_TITLE="Language Manager: New Content Language"
