@@ -204,7 +204,7 @@ JLIB_FILESYSTEM_BZIP_NOT_SUPPORTED="BZip2 Not Supported"
 JLIB_FILESYSTEM_BZIP_UNABLE_TO_READ="Unable to read archive (bz2)"
 JLIB_FILESYSTEM_BZIP_UNABLE_TO_WRITE="Unable to write archive (bz2)"
 JLIB_FILESYSTEM_BZIP_UNABLE_TO_WRITE_FILE="Unable to write file (bz2)"
-JLIB_FILESYSTEM_GZIP_NOT_SUPPORTED="Zlib Not Supported"
+JLIB_FILESYSTEM_GZIP_NOT_SUPPORTED="GZip Not Supported"
 JLIB_FILESYSTEM_GZIP_UNABLE_TO_READ="Unable to read archive (gz)"
 JLIB_FILESYSTEM_GZIP_UNABLE_TO_WRITE="Unable to write archive (gz)"
 JLIB_FILESYSTEM_GZIP_UNABLE_TO_WRITE_FILE="Unable to write file (gz)"
